# artifacts/api-server/src/routes/index.ts
@@ -1,8 +1,16 @@
 import { Router, type IRouter } from "express";
 import healthRouter from "./health";
+import productsRouter from "./products";
+import reviewsRouter from "./reviews";
+import galleryRouter from "./gallery";
+import statsRouter from "./stats";
 
 const router: IRouter = Router();
 
 router.use(healthRouter);
+router.use(productsRouter);
+router.use(reviewsRouter);
+router.use(galleryRouter);
+router.use(statsRouter);
 
 export default router;
